iti-271154/iti-271154_u3/Otros/00_CodigosFlexBison/00flexBison0-Calculadora/parser.output
Gramática

    0 $accept: input $end

    1 input: ε
    2      | input line

    3 line: exp EQUAL END

    4 exp: NUMBER
    5    | exp PLUS exp
    6    | exp MINUS exp
    7    | exp MULT exp
    8    | exp DIV exp
    9    | MINUS exp
   10    | L_PAREN exp R_PAREN


Terminales con las reglas donde aparecen

    $end (0) 0
    error (256)
    MULT (258) 7
    DIV (259) 8
    PLUS (260) 5
    MINUS (261) 6 9
    EQUAL (262) 3
    L_PAREN (263) 10
    R_PAREN (264) 10
    END (265) 3
    NUMBER <dval> (266) 4
    UMINUS (267)


No terminales con las reglas donde aparecen

    $accept (13)
        on left: 0
    input <cval> (14)
        on left: 1 2
        on right: 0 2
    line (15)
        on left: 3
        on right: 2
    exp <dval> (16)
        on left: 4 5 6 7 8 9 10
        on right: 3 5 6 7 8 9 10


Estado 0

    0 $accept: • input $end

    $default  reduce usando la regla 1 (input)

    input  ir al estado 1


Estado 1

    0 $accept: input • $end
    2 input: input • line

    $end     desplazar e ir al estado 2
    MINUS    desplazar e ir al estado 3
    L_PAREN  desplazar e ir al estado 4
    NUMBER   desplazar e ir al estado 5

    line  ir al estado 6
    exp   ir al estado 7


Estado 2

    0 $accept: input $end •

    $default  aceptar


Estado 3

    9 exp: MINUS • exp

    MINUS    desplazar e ir al estado 3
    L_PAREN  desplazar e ir al estado 4
    NUMBER   desplazar e ir al estado 5

    exp  ir al estado 8


Estado 4

   10 exp: L_PAREN • exp R_PAREN

    MINUS    desplazar e ir al estado 3
    L_PAREN  desplazar e ir al estado 4
    NUMBER   desplazar e ir al estado 5

    exp  ir al estado 9


Estado 5

    4 exp: NUMBER •

    $default  reduce usando la regla 4 (exp)


Estado 6

    2 input: input line •

    $default  reduce usando la regla 2 (input)


Estado 7

    3 line: exp • EQUAL END
    5 exp: exp • PLUS exp
    6    | exp • MINUS exp
    7    | exp • MULT exp
    8    | exp • DIV exp

    MULT   desplazar e ir al estado 10
    DIV    desplazar e ir al estado 11
    PLUS   desplazar e ir al estado 12
    MINUS  desplazar e ir al estado 13
    EQUAL  desplazar e ir al estado 14


Estado 8

    5 exp: exp • PLUS exp
    6    | exp • MINUS exp
    7    | exp • MULT exp
    8    | exp • DIV exp
    9    | MINUS exp •

    $default  reduce usando la regla 9 (exp)


Estado 9

    5 exp: exp • PLUS exp
    6    | exp • MINUS exp
    7    | exp • MULT exp
    8    | exp • DIV exp
   10    | L_PAREN exp • R_PAREN

    MULT     desplazar e ir al estado 10
    DIV      desplazar e ir al estado 11
    PLUS     desplazar e ir al estado 12
    MINUS    desplazar e ir al estado 13
    R_PAREN  desplazar e ir al estado 15


Estado 10

    7 exp: exp MULT • exp

    MINUS    desplazar e ir al estado 3
    L_PAREN  desplazar e ir al estado 4
    NUMBER   desplazar e ir al estado 5

    exp  ir al estado 16


Estado 11

    8 exp: exp DIV • exp

    MINUS    desplazar e ir al estado 3
    L_PAREN  desplazar e ir al estado 4
    NUMBER   desplazar e ir al estado 5

    exp  ir al estado 17


Estado 12

    5 exp: exp PLUS • exp

    MINUS    desplazar e ir al estado 3
    L_PAREN  desplazar e ir al estado 4
    NUMBER   desplazar e ir al estado 5

    exp  ir al estado 18


Estado 13

    6 exp: exp MINUS • exp

    MINUS    desplazar e ir al estado 3
    L_PAREN  desplazar e ir al estado 4
    NUMBER   desplazar e ir al estado 5

    exp  ir al estado 19


Estado 14

    3 line: exp EQUAL • END

    END  desplazar e ir al estado 20


Estado 15

   10 exp: L_PAREN exp R_PAREN •

    $default  reduce usando la regla 10 (exp)


Estado 16

    5 exp: exp • PLUS exp
    6    | exp • MINUS exp
    7    | exp • MULT exp
    7    | exp MULT exp •
    8    | exp • DIV exp

    $default  reduce usando la regla 7 (exp)


Estado 17

    5 exp: exp • PLUS exp
    6    | exp • MINUS exp
    7    | exp • MULT exp
    8    | exp • DIV exp
    8    | exp DIV exp •

    $default  reduce usando la regla 8 (exp)


Estado 18

    5 exp: exp • PLUS exp
    5    | exp PLUS exp •
    6    | exp • MINUS exp
    7    | exp • MULT exp
    8    | exp • DIV exp

    MULT  desplazar e ir al estado 10
    DIV   desplazar e ir al estado 11

    $default  reduce usando la regla 5 (exp)


Estado 19

    5 exp: exp • PLUS exp
    6    | exp • MINUS exp
    6    | exp MINUS exp •
    7    | exp • MULT exp
    8    | exp • DIV exp

    MULT  desplazar e ir al estado 10
    DIV   desplazar e ir al estado 11

    $default  reduce usando la regla 6 (exp)


Estado 20

    3 line: exp EQUAL END •

    $default  reduce usando la regla 3 (line)
